--- a/site-assets/manifest/webmanifest.json
+++ b/site-assets/manifest/webmanifest.json
@@ -1,6 +1,6 @@
 {
     "name": "SpeingCodeEditor",
-    "short_name": "CodeEditor",
+    "short_name": "SpeingCode",
     "icons": [
         {
             "src": "../assets/logo/CitohubIcon-192px.png",
